[gd_scene load_steps=13 format=2]

[ext_resource path="res://Terrain.glb" type="PackedScene" id=1]
[ext_resource path="res://CutScene2.gd" type="Script" id=2]
[ext_resource path="res://cut_scene2_1.wav" type="AudioStream" id=3]
[ext_resource path="res://bear_attack.wav" type="AudioStream" id=4]
[ext_resource path="res://cut_scene2_2.wav" type="AudioStream" id=5]
[ext_resource path="res://Oldman.glb" type="PackedScene" id=6]
[ext_resource path="res://Skip.glb" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.879245, 0.446339, 0.177271 )

[sub_resource type="ProceduralSky" id=1]
ground_bottom_color = Color( 0.792157, 0.933333, 1, 1 )
ground_horizon_color = Color( 0.847059, 0.988235, 1, 1 )
sun_latitude = 33.06
texture_size = 0

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 0.356863, 0.592157, 0.643137, 1 )

[sub_resource type="Animation" id=4]
resource_name = "oldman monologue"
length = 13.0
tracks/0/type = "value"
tracks/0/path = NodePath("Oldman:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 1.7, 2.1, 2.4, 2.7, 3.1, 3.4, 3.8, 4.5, 4.8, 5.2, 5.5, 5.9, 6.4, 6.7, 7.2, 7.8, 8.1, 8.5, 8.9, 9.2, 9.6, 9.9, 10.4, 10.8, 11.3, 11.7, 12.3, 12.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.744954, 6.35152, -3.53093 ), Vector3( 0.744954, 8.72842, -3.53093 ), Vector3( 0.744954, 8.97981, -3.53093 ), Vector3( 0.744954, 8.66956, -3.53093 ), Vector3( 0.744954, 8.80287, -3.53093 ), Vector3( 0.744954, 8.70671, -3.53093 ), Vector3( 0.744954, 8.96045, -3.53093 ), Vector3( 0.744954, 8.83475, -3.53093 ), Vector3( 0.744954, 8.95473, -3.53093 ), Vector3( 0.744954, 8.72842, -3.53093 ), Vector3( 0.744954, 8.72842, -3.53093 ), Vector3( 0.744954, 8.60215, -3.53093 ), Vector3( 0.744954, 8.66414, -3.53093 ), Vector3( 0.744954, 8.50464, -3.53093 ), Vector3( 0.744954, 8.63956, -3.53093 ), Vector3( 0.744954, 8.46263, -3.53093 ), Vector3( 0.744954, 8.68832, -3.53093 ), Vector3( 0.744954, 8.72842, -3.53093 ), Vector3( 0.744954, 8.72842, -3.53093 ), Vector3( 0.744954, 8.64525, -3.53093 ), Vector3( 0.744954, 8.75435, -3.53093 ), Vector3( 0.744954, 8.66946, -3.53093 ), Vector3( 0.744954, 8.77553, -3.53093 ), Vector3( 0.744954, 8.70875, -3.53093 ), Vector3( 0.744954, 8.79197, -3.53093 ), Vector3( 0.744954, 8.67337, -3.53093 ), Vector3( 0.744954, 8.80828, -3.53093 ), Vector3( 0.744954, 8.70558, -3.53093 ), Vector3( 0.744954, 8.85734, -3.53093 ), Vector3( 0.744954, 8.73821, -3.53093 ), Vector3( 0.744954, 8.72842, -3.53093 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "sun goes down"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:environment:background_sky:sun_latitude")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 9.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 33.06, -49.53 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:environment:background_sky:sun_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5, 7.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.980392, 0.498039, 1 ), Color( 1, 0.533333, 0.498039, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera:environment:background_sky:sun_angle_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 9.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 13.71 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:environment:background_sky:sun_angle_max")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 9.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 100.0, 172.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DirectionalLight:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 9.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -110, 0, 0 ), Vector3( -270, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Camera:environment:background_sky:sky_top_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 9.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.647059, 0.839216, 0.945098, 1 ), Color( 0.0941176, 0.0941176, 0.0941176, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Camera:environment:background_sky:sky_horizon_color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 9.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.839216, 0.917647, 0.980392, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Camera:environment:ambient_light_color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 9.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.356863, 0.592157, 0.643137, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Camera:environment:background_sky:ground_bottom_color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 9.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.792157, 0.933333, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Camera:environment:background_sky:ground_horizon_color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 9.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.847059, 0.988235, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("DirectionalLight:light_energy")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 9.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="Skip" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.905169, 0, 0.425053, 0, 1, 0, -0.425053, 0, 0.905169, -5.8569, 9.5695, -4.10003 )

[node name="StaticBody" type="StaticBody" parent="Skip"]

[node name="CollisionShape" type="CollisionShape" parent="Skip/StaticBody"]
transform = Transform( 0.992718, 0, -0.120466, 0, 1, 0, 0.120466, 0, 0.992718, 0.842664, 0, -0.325659 )
shape = SubResource( 5 )

[node name="Oldman" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.778243, 0, -0.627963, 0, 1, 0, 0.627963, 0, 0.778243, 0.744954, 6.35152, -3.53093 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.565, 0 )
light_color = Color( 1, 0.772549, 0.290196, 1 )
light_energy = 0.13

[node name="Terrain" parent="." instance=ExtResource( 1 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.34202, 0.939693, 0, -0.939693, -0.34202, 0, 0, 0 )
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.934323, 0, 0.356428, 0, 1, 0, -0.356428, 0, 0.934323, 0, 11.0853, 0 )
keep_aspect = 0
environment = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/oldman monologue" = SubResource( 4 )
"anims/sun goes down" = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.157

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="mouse_entered" from="Skip/StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="Skip/StaticBody" to="." method="_on_StaticBody_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
